[AGAA] Continue filling in notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/03_05.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/03_05.html
@@ -43,6 +43,29 @@
 <li>
 <a href="03_05.html#Polynomial%20Function">Polynomial Function</a>
 
+</li><li>
+<a href="03_05.html#Cubic%20Functions">Cubic Functions</a>
+
+</li><li>
+<a href="03_05.html#Quartic%20Functions">Quartic Functions</a>
+
+</li><li>
+<a href="03_05.html#Extrema">Extrema</a>
+
+<ul>
+<li>
+<a href="03_05.html#Number%20of%20Turning%20Points">Number of Turning Points</a>
+
+</li></ul>
+</li><li>
+<a href="03_05.html#End%20Behaviour">End Behaviour</a>
+
+</li><li>
+<a href="03_05.html#x-Intercepts%20%28Real%20Zeros%29">x-Intercepts  Real Zeros</a>
+
+</li><li>
+<a href="03_05.html#Comprehensive%20Graphs">Comprehensive Graphs</a>
+
 </li></ul>
 <hr>
 
@@ -59,6 +82,133 @@ P(x) = a_nx^n + a_{n-1}x^{n-1} + \cdots + a_1 x + a_0
 <p>
 where each \(a_1\) is a real number, \(a_n \neq 0\) and \(n\) is a whole number.
 </p>
+
+<p>
+The behavior of the graph of a polynomial function is due largely to the value of the coefficient \(a_n\) and the parity of the exponent \(n\) on the term of greatest degree. For this reason, we will refer to \(a_n\) as the <span id="High-Degree Polynomial Functions and Graphs-Polynomial Function-leading coefficient"></span><strong id="leading coefficient">leading coefficient</strong> and to \(a_n x_n\) as the <span id="High-Degree Polynomial Functions and Graphs-Polynomial Function-dominating term"></span><strong id="dominating term">dominating term</strong>. 
+</p>
+
+<p>
+The term \(a_0\) is the <span id="High-Degree Polynomial Functions and Graphs-Polynomial Function-constant term"></span><strong id="constant term">constant term</strong> of the polynomial function, and since \(P(0) = a_0\), it is the \(y\)-value of the \(y\)-intercept of the graph.
+</p>
+
+<div id="High-Degree Polynomial Functions and Graphs-Cubic Functions"><h2 id="Cubic Functions" class="header"><a href="#High-Degree Polynomial Functions and Graphs-Cubic Functions">Cubic Functions</a></h2></div>
+
+<p>
+A polynomial function of the form:
+</p>
+
+\begin{align}
+P(x) = ax^3 + bx^2 + cx + d, a \neq 0
+\end{align}
+
+<p>
+is a <span id="High-Degree Polynomial Functions and Graphs-Cubic Functions-cubic function"></span><strong id="cubic function">cubic function</strong>.
+</p>
+
+<div id="High-Degree Polynomial Functions and Graphs-Quartic Functions"><h2 id="Quartic Functions" class="header"><a href="#High-Degree Polynomial Functions and Graphs-Quartic Functions">Quartic Functions</a></h2></div>
+
+<p>
+A polynomial function of the form:
+</p>
+
+\begin{align}
+P(x) = ax^4 + bx^3 + cx^2 + dx + e, a \neq 0
+\end{align}
+
+<p>
+is a <span id="High-Degree Polynomial Functions and Graphs-Quartic Functions-quartic function"></span><strong id="quartic function">quartic function</strong>.
+</p>
+
+<div id="High-Degree Polynomial Functions and Graphs-Extrema"><h2 id="Extrema" class="header"><a href="#High-Degree Polynomial Functions and Graphs-Extrema">Extrema</a></h2></div>
+
+<p>
+The graphs for polynomial may have <span id="High-Degree Polynomial Functions and Graphs-Extrema-turning points"></span><strong id="turning points">turning points</strong> where the function changes from increasing to decreasing or vice versa.
+</p>
+
+<p>
+Let \(c\) be in the domain of \(P\), then the following hold:
+</p>
+
+<ol>
+<li>
+\(P(c)\) is an <span id="High-Degree Polynomial Functions and Graphs-Extrema-absolute maximum"></span><strong id="absolute maximum">absolute maximum</strong> if \(P(c) \geq P(x)\) for all \(x\) in the domain of \(P\)
+
+</li><li>
+\(P(c)\) is an <span id="High-Degree Polynomial Functions and Graphs-Extrema-absolute minimum"></span><strong id="absolute minimum">absolute minimum</strong> if \(P(c) \leq P(x)\) for all \(x\) in the domain of \(P\)
+
+</li><li>
+\(P(c)\) is an <span id="High-Degree Polynomial Functions and Graphs-Extrema-local maximum"></span><strong id="local maximum">local maximum</strong> if \(P(c) \geq P(x)\) when \(x\) is near \(c\)
+
+</li><li>
+\(P(c)\) is an <span id="High-Degree Polynomial Functions and Graphs-Extrema-local minimum"></span><strong id="local minimum">local minimum</strong> if \(P(c) \leq P(x)\) when \(x\) is near \(c\)
+
+</li></ol>
+<div id="High-Degree Polynomial Functions and Graphs-Extrema-Number of Turning Points"><h3 id="Number of Turning Points" class="header"><a href="#High-Degree Polynomial Functions and Graphs-Extrema-Number of Turning Points">Number of Turning Points</a></h3></div>
+
+<p>
+The number of turning points of the graph of a polynomial function of degree \(n \geq 1\) is at most \(n - 1\).
+</p>
+
+<div id="High-Degree Polynomial Functions and Graphs-End Behaviour"><h2 id="End Behaviour" class="header"><a href="#High-Degree Polynomial Functions and Graphs-End Behaviour">End Behaviour</a></h2></div>
+
+<p>
+Suppose that \(ax^n\) is the dominating term of a polynomial function \(P\) of odd degree.
+</p>
+
+<ol>
+<li>
+If \(a &gt; 0\), then as \(x \rightarrow \infty\), \(P(x) \rightarrow \infty\), and as \(x \rightarrow -\infty\), \(P(x) \rightarrow -\infty\). Therefore, the end behavior of the graph is of the type shown in FIGURE 52(a). 
+
+</li><li>
+If \(a &lt; 0\), then as \(x \rightarrow \infty\), \(P(x) \rightarrow -\infty\), and as \(x \rightarrow -\infty\), \(P(x) \rightarrow \infty\). Therefore, the end behavior of the graph is of the type shown in FIGURE 52(b). 
+
+</li></ol>
+<p>
+<img src="https://albamr09.github.io/public/assets/end_behaviour_polynomial_odd.png" alt="End Behaviour" style="width:400px;">
+</p>
+
+<p>
+Suppose that \(ax^n\) is the dominating term of a polynomial function \(P\) of even degree.
+</p>
+
+<ol>
+<li>
+If \(a &gt; 0\), then as \(|x| \rightarrow \infty\), \(P(x) \rightarrow \infty\). Therefore, the end behavior of the graph is of the type shown in FIGURE 53(a). 
+
+</li><li>
+If \(a &lt; 0\), then as \(|x| \rightarrow \infty\), \(P(x) \rightarrow -\infty\). Therefore, the end behavior of the graph is of the type shown in FIGURE 53(b). 
+
+</li></ol>
+<p>
+<img src="https://albamr09.github.io/public/assets/end_behaviour_polynomial_even.png" alt="End Behaviour" style="width:400px;">
+</p>
+
+<div id="High-Degree Polynomial Functions and Graphs-x-Intercepts (Real Zeros)"><h2 id="x-Intercepts (Real Zeros)" class="header"><a href="#High-Degree Polynomial Functions and Graphs-x-Intercepts (Real Zeros)">x-Intercepts (Real Zeros)</a></h2></div>
+
+<p>
+The graph of a polynomial function of degree \(n\) will have at most \(n\) \(x\)-intercepts (real zeros).
+</p>
+
+<div id="High-Degree Polynomial Functions and Graphs-Comprehensive Graphs"><h2 id="Comprehensive Graphs" class="header"><a href="#High-Degree Polynomial Functions and Graphs-Comprehensive Graphs">Comprehensive Graphs</a></h2></div>
+
+<p>
+The most important features of the graph of a polynomial function are its intercepts, extrema, and end behavior. For this reason, a comprehensive graph of a polynomial function will exhibit the following features.
+</p>
+
+<ol>
+<li>
+All \(x\)-intercepts (if any)
+
+</li><li>
+The \(y\)-intercept
+
+</li><li>
+All extreme points (if any)
+
+</li><li>
+Enough of the graph to reveal the correct end behavior
+
+</li></ol>
 </div>
   
 
