--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -101,6 +101,9 @@ Polynomial Functions
 </li><li>
 <a href="03_05.html">High-Degree Polynomial Functions and Graphs</a>
 
+</li><li>
+<a href="03_06.html">Topics in the Theory of Polynomial Functions (I)</a>
+
 </li></ol>
 </li><li>
 Rational, Power and Root Functions
