--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -104,10 +104,33 @@ Polynomial Functions
 </li><li>
 <a href="03_06.html">Topics in the Theory of Polynomial Functions (I)</a>
 
+</li><li>
+<a href="03_07.html">Topics in the Theory of Polynomial Functions (II)</a>
+
+</li><li>
+<a href="03_08.html">Polynomial Equations and Inequalities; Further Applications and Models</a>
+
 </li></ol>
 </li><li>
 Rational, Power and Root Functions
 
+<ol>
+<li>
+<a href="04_01.html">Rational Functions and Graphs (I)</a>
+
+</li><li>
+<a href="04_02.html">Rational Functions and Graphs (II)</a>
+
+</li><li>
+<a href="04_03.html">Rational Equations, Inequalities, Models and Applications</a>
+
+</li><li>
+<a href="04_04.html">Functions Defined by Powers and Roots</a>
+
+</li><li>
+<a href="04_05.html">Equations, Inequalities, and Applications Involving Root Functions</a>
+
+</li></ol>
 </li><li>
 Inverse, Exponential and Logarithmic Functions
 
