[AGAA] Continue filling in notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -134,12 +134,32 @@ Rational, Power and Root Functions
 </li><li>
 Inverse, Exponential and Logarithmic Functions
 
+<ol>
+<li>
+<a href="05_01.html">Inverse Functions</a>
+
+</li><li>
+<a href="05_02.html">Exponential Functions</a>
+
+</li><li>
+<a href="05_03.html">Logarithms and Their Properites</a>
+
+</li><li>
+<a href="05_04.html">Logarithmic Functions</a>
+
+</li><li>
+<a href="05_05.html">Exponential and Logarithmic Equations and Inequalities</a>
+
+</li><li>
+<a href="05_06.html">Further Applications and Modeling with Exponential and Logarithmic Functions</a>
+
+</li></ol>
 </li><li>
 Systems and Matrices
 
 <ol>
 <li>
-Systems of Equations
+<a href="06_01.html">Systems of Equations</a>
 
 </li><li>
 <a href="06_02.html">Solutions of Linear Systems in Three Variables</a>
