[AGAA] Finish filling in notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/06_01.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/06_01.html
@@ -43,10 +43,83 @@
 <li>
 <a href="06_01.html#Linear%20Systems">Linear Systems</a>
 
+</li><li>
+<a href="06_01.html#Substitution%20Method">Substitution Method</a>
+
+</li><li>
+<a href="06_01.html#Substitution%20Method">Substitution Method</a>
+
+</li><li>
+<a href="06_01.html#Nonlinear%20Systems">Nonlinear Systems</a>
+
 </li></ul>
 <hr>
 
 <div id="Systems of Equations-Linear Systems"><h2 id="Linear Systems" class="header"><a href="#Systems of Equations-Linear Systems">Linear Systems</a></h2></div>
+
+<p>
+Any equation of the form:
+</p>
+
+\begin{align}
+a_1 x_1 + a_2 x_2 + \cdots + a_n x_n = b
+\end{align}
+
+<p>
+for real numbers \(a_1, a_2, \cdots, a_n\) (not all zero) and \(b\) is a <span id="Systems of Equations-Linear Systems-linear equation"></span><strong id="linear equation">linear equation</strong> or a <span id="Systems of Equations-Linear Systems-first-degree equation in"></span><strong id="first-degree equation in">first-degree equation in</strong> \(n\) <span id="Systems of Equations-Linear Systems-unknowns"></span><strong id="unknowns">unknowns</strong>.
+</p>
+
+<p>
+A set of equations is called a <span id="Systems of Equations-Linear Systems-system of equations"></span><strong id="system of equations">system of equations</strong>. The solutions of a system of equations must satisfy every equation in the system. If all the equations in a system are linear, the system is a <span id="Systems of Equations-Linear Systems-system of linear equations"></span><strong id="system of linear equations">system of linear equations</strong>, or a <span id="Systems of Equations-Linear Systems-linear system"></span><strong id="linear system">linear system</strong>.
+</p>
+
+<p>
+There are three possible outcomes for the graph of a system of two linear equations in two variables:
+</p>
+
+<ol>
+<li>
+The graphs intersect at exactly one point, which gives the (single) ordered-pair solution of the system. The system is <span id="Systems of Equations-Linear Systems-consistent"></span><strong id="consistent">consistent</strong> and the <span id="Systems of Equations-Linear Systems-equations are independent"></span><strong id="equations are independent">equations are independent</strong>. (FIGURE 1a)
+
+</li><li>
+The graphs are parallel lines, so there is no solution and the solution set is \(\emptyset\). The system is <span id="Systems of Equations-Linear Systems-inconsistent"></span><strong id="inconsistent">inconsistent</strong> and the <span id="Systems of Equations-Linear Systems-equations are independent"></span><strong id="equations are independent">equations are independent</strong>. See FIGURE 1(b).
+
+</li><li>
+The graphs are the same line, and there are infinitely many solutions. The system is <span id="Systems of Equations-Linear Systems-consistent"></span><strong id="consistent">consistent</strong> and the <span id="Systems of Equations-Linear Systems-equations are dependent"></span><strong id="equations are dependent">equations are dependent</strong>. See FIGURE 1(c).
+
+</li></ol>
+<p>
+<img src="https://albamr09.github.io/public/assets/systems_of_linear_equations.png" alt="Systems of Linear Equations" style="width:600px;">
+</p>
+
+<div id="Systems of Equations-Substitution Method"><h2 id="Substitution Method" class="header"><a href="#Systems of Equations-Substitution Method">Substitution Method</a></h2></div>
+
+<p>
+In a system of two equations with two variables, the <span id="Systems of Equations-Substitution Method-substitution method"></span><strong id="substitution method">substitution method</strong> involves using one equation to find an expression for one variable in terms of the other, and then substituting this expression into the other equation of the system.
+</p>
+
+<div id="Systems of Equations-Substitution Method"><h2 id="Substitution Method" class="header"><a href="#Systems of Equations-Substitution Method">Substitution Method</a></h2></div>
+
+<p>
+Another way to solve a system of two equations, the <span id="Systems of Equations-Substitution Method-elimination method"></span><strong id="elimination method">elimination method</strong>, uses multiplication and addition to eliminate a variable from one equation. Systems that have the same solution set are called <span id="Systems of Equations-Substitution Method-equivalent systems"></span><strong id="equivalent systems">equivalent systems</strong>. The three transformations allowed are the following:
+</p>
+
+<ol>
+<li>
+Interchange any two equations of the system.
+
+</li><li>
+Multiply or divide any equation of the system by a nonzero real number.
+
+</li><li>
+Replace any equation of the system by the sum of that equation and a multiple of another equation in the system.
+
+</li></ol>
+<div id="Systems of Equations-Nonlinear Systems"><h2 id="Nonlinear Systems" class="header"><a href="#Systems of Equations-Nonlinear Systems">Nonlinear Systems</a></h2></div>
+
+<p>
+A <span id="Systems of Equations-Nonlinear Systems-nonlinear system of equations"></span><strong id="nonlinear system of equations">nonlinear system of equations</strong> is a system in which at least one of the equations is not a linear equation.
+</p>
 </div>
   
 
