[AGAA] 11: finish notes for 07 [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -294,6 +294,9 @@ Further Topics in Algebra
 </li><li>
 <a href="11_06.html">Mathematical Induction</a>
 
+</li><li>
+<a href="11_07.html">Probability</a>
+
 </li></ol>
 </li></ol>
 </div>
