[AGAA] Fix typos [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/11_07.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/11_07.html
@@ -167,10 +167,10 @@ For any events \(E\) and \(F\) the following hold:
 \(0 \leq P(E) \leq 1\)
 
 </li><li>
-P(\text{a certain event}) = 1
+\(P(\text{a certain event}) = 1\)
 
 </li><li>
-P(\text{an impossible event}) = 0
+\(P(\text{an impossible event}) = 0\)
 
 </li><li>
 \(P(E') = 1 - P(E)\)
