--- a/src/Notes/ComputerScience/CG/RTGW/05.html
+++ b/src/Notes/ComputerScience/CG/RTGW/05.html
@@ -1,12 +1,15 @@
-<html><head>
+<html>
+  <head>
     <!-- Normal styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/index.css">
+    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/index.css" />
     <!-- Custom styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/custom.css">
-    <title>Animations</title>
-  <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
+    <link rel="Stylesheet" type="text/css" href="../../../../../src/style/custom.css" />
+    <title>05</title>
+  </head>
   <body>
-    <a href="https://albamr09.github.io/" style="
+    <a
+      href="https://albamr09.github.io/"
+      style="
         color: white;
         font-weight: bold;
         text-decoration: none;
@@ -14,21 +17,29 @@
         border-radius: 3px;
         background-color: #1e90ff;
         text-transform: uppercase;
-      ">Index</a>
+      "
+      >Index</a
+    >
     <form id="search_form" class="search-form">
-      <input required="" type="search" id="search_term" class="searchTerm">
+      <input required type="search" id="search_term" class="searchTerm" />
       <button type="submit" class="searchButton">Search</button>
     </form>
     <div id="search-background" class="search-background">
       <div id="search-result" class="search-result-hide"></div>
       <div id="search-form-modal" class="search-form-modal">
         <form id="search-form-in-modal">
-          <input required="" type="search" id="search-input-in-modal" class="search-input-in-modal" placeholder="Search whatever...">
+          <input
+            required
+            type="search"
+            id="search-input-in-modal"
+            class="search-input-in-modal"
+            placeholder="Search whatever..."
+          />
           <button type="submit" class="searchButton">Search</button>
         </form>
       </div>
     </div>
-    <hr>
+    <hr />
     <div class="content">
 <p>
 <a href="index.html">Back</a>
@@ -36,32 +47,32 @@
 
 <div id="Animations"><h1 id="Animations" class="header"><a href="#Animations">Animations</a></h1></div>
 
-<hr>
+<hr />
 
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
 <a href="05.html#WebGL%20Matrix%20Naming%20Conventions">WebGL Matrix Naming Conventions</a>
 
-</li><li>
+<li>
 <a href="05.html#Scene%20graph">Scene graph</a>
 
-</li><li>
+<li>
 <a href="05.html#Matrix%20Stacks">Matrix Stacks</a>
 
-</li><li>
+<li>
 <a href="05.html#Animating%20a%203D%20scene">Animating a 3D scene</a>
 
 <ul>
 <li>
 <a href="05.html#The%20requestAnimationFrame%20Function">The requestAnimationFrame Function</a>
 
-</li></ul>
-</li><li>
+</ul>
+<li>
 <a href="05.html#Parametric%20Curves">Parametric Curves</a>
 
-</li></ul>
-<hr>
+</ul>
+<hr />
 
 <div id="Animations-WebGL Matrix Naming Conventions"><h2 id="WebGL Matrix Naming Conventions" class="header"><a href="#Animations-WebGL Matrix Naming Conventions">WebGL Matrix Naming Conventions</a></h2></div>
 
@@ -73,19 +84,19 @@ Before we go any further, let's take a moment to quickly summarize some of the c
 <li>
 <span id="Animations-WebGL Matrix Naming Conventions-World Matrix"></span><strong id="World Matrix">World Matrix</strong>: Sometimes referred to as the Model matrix, this is a matrix that takes the vertices of a model and moves them to world space.
 
-</li><li>
+<li>
 *Camera Matri*x: This matrix positions the camera in the world. You can also think of it as the World matrix for the camera.
 
-</li><li>
+<li>
 <span id="Animations-WebGL Matrix Naming Conventions-View Matrix"></span><strong id="View Matrix">View Matrix</strong>: This matrix moves everything else in the world in front of the camera. As we've seen, this is the inverse of the Camera matrix.
 
-</li><li>
+<li>
 <span id="Animations-WebGL Matrix Naming Conventions-Projection Matrix"></span><strong id="Projection Matrix">Projection Matrix</strong>: This is the matrix that converts a frustum of space into clip space. You can also think of it as the matrix returned by your matrix math library's perspective or orthographic function.
 
-</li><li>
+<li>
 <span id="Animations-WebGL Matrix Naming Conventions-Local Matrix"></span><strong id="Local Matrix">Local Matrix</strong>: The matrix is used in scene graphs, where the matrix, at any particular node on the graph, is used before multiplying with any other nodes.
 
-</li></ul>
+</ul>
 <div id="Animations-Scene graph"><h2 id="Scene graph" class="header"><a href="#Animations-Scene graph">Scene graph</a></h2></div>
 
 <p>
@@ -106,22 +117,22 @@ The matrix stack works at each rendering cycle, it requires calculating the scen
 <li>
 Global Transform: Update the model-view matrix for each object and push it to the stack. This allows us to recover the original matrix once we’ve applied local transforms.
 
-</li><li>
+<li>
 Local Transform: Update Model-View matrix for each object in the scene by multiplying the original Model-View matrix by a matrix that represents the rotation, translation, and/or scaling of each object in the scene.
 
-</li><li>
+<li>
 Recover the original matrix for the stack.
 
-</li><li>
+<li>
 Repeat the process for each object on the scene.
 
-</li></ol>
+</ol>
 <p>
 The following diagram shows this procedure for one object:
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/matrix_stack.png" alt="Matrix Stack" style="width:600px;">
+<img src="/home/alba/Documentos/GitRepos/Estudio/NoteWorld/VimWiki/src/Notes/ComputerScience/CG/RTGW/assets/matrix_stack.png" alt="Matrix Stack" style="width:600px;" />
 </p>
 
 <div id="Animations-Animating a 3D scene"><h2 id="Animating a 3D scene" class="header"><a href="#Animations-Animating a 3D scene">Animating a 3D scene</a></h2></div>
@@ -147,7 +158,7 @@ There are many situations where we don't know the exact position of an object at
 </p>
 
 <p>
-<img src="https://albamr09.github.io/public/assets/parametric_curves_example.png" alt="Parametric Curves" style="width:500px;">
+<img src="/home/alba/Documentos/GitRepos/Estudio/NoteWorld/VimWiki/src/Notes/ComputerScience/CG/RTGW/assets/parametric_curves_example.png" alt="Parametric Curves" style="width:500px;" />
 </p>
 
 \[
@@ -157,12 +168,16 @@ h = H_0 + V_0t - \frac{1}{2}gt^2
 <p>
 where \(g\) is the gravity at \(9.8 m/s\), \(V_0\) is the initial velocity, \(H_0\) is the initial position, \(t\) is the time and \(h\) is the position at \(t\).
 </p>
-</div>
-  
 
-<script type="text/javascript" src="https://albamr09.github.io/src/lib/highlight.min.js" id="js_highlight" data-description="Support sytax highlighting on code"></script><script type="text/javascript" src="https://albamr09.github.io/src/lib/zepto.min.js" id="zepto" data-description="Library to perform search"></script><script type="text/javascript" src="https://albamr09.github.io/src/lib/flexsearch.bundle.js" id="flexsearch" data-description="Library to perform search"></script><script type="text/javascript" src="https://albamr09.github.io/src/lib/search.js" id="search" data-description="Library to perform search"></script><script type="text/javascript" id="search" data-description="Entrypoint for hightlihgting">
-  $("pre").each(function (index, item) {
-    $(item).html("<code>" + $(item).html() + "</code>");
-  });
-  hljs.highlightAll();
-</script></body></html>
+<div id="Animations-Optimizing Batch Performance"><h2 id="Optimizing Batch Performance" class="header"><a href="#Animations-Optimizing Batch Performance">Optimizing Batch Performance</a></h2></div>
+
+<p>
+WebGL 2 adds some interesting features, such as <span id="Animations-Optimizing Batch Performance-geometry-instancing"></span><strong id="geometry-instancing">geometry-instancing</strong>. This feature allows us to render the same instance of a single mesh with differing shader attributes using instancing and only one render call. Though instancing is limited, as it’s based on the same mesh only, it’s still a great way to improve performance if you have to draw the same meshes multiple times, especially if combined with shaders.
+</p>
+
+<p>
+While this functionality is provided in WebGL 2, we'll build our own geometry-optimization techniques for educational purposes.
+</p>
+</div>
+  </body>
+</html>
