[AGAA] B: start reading [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -298,6 +298,14 @@ Further Topics in Algebra
 <a href="11_07.html">Probability</a>
 
 </li></ol>
+</li><li>
+Appendix
+
+<ol>
+<li>
+<a href="B.html">B. Vectors in Space</a>
+
+</li></ol>
 </li></ol>
 </div>
   
