--- a/src/Notes/Math/Pre-Calculus/AGAA/B.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/B.html
@@ -51,13 +51,22 @@
 </li><li>
 <a href="B.html#Vectors%20in%20Space">Vectors in Space</a>
 
+</li><li>
+<a href="B.html#Vector%20Definitions%20and%20Operations">Vector Definitions and Operations</a>
+
+</li><li>
+<a href="B.html#Angle%20between%20Two%20Vectors">Angle between Two Vectors</a>
+
+</li><li>
+<a href="B.html#Direction%20Angles%20in%20Space">Direction Angles in Space</a>
+
 </li></ul>
 <hr>
 
 <div id="Vectors in Space-Rectangular Coordinates in Space"><h2 id="Rectangular Coordinates in Space" class="header"><a href="#Vectors in Space-Rectangular Coordinates in Space">Rectangular Coordinates in Space</a></h2></div>
 
 <p>
-On a three dimensional space, we associate each point with an <span id="Vectors in Space-Rectangular Coordinates in Space-ordered triple"></span><strong id="ordered triple">ordered triple</strong> \((x, y z)\) (see FIGure 1). The region of three-dimensional space where are coordinates are positive is called the <span id="Vectors in Space-Rectangular Coordinates in Space-first octant"></span><strong id="first octant">first octant</strong>. There are eight octants in all.
+On a three dimensional space, we associate each point with an <span id="Vectors in Space-Rectangular Coordinates in Space-ordered triple"></span><strong id="ordered triple">ordered triple</strong> \((x, y z)\) (see FIGURE 1). The region of three-dimensional space where are coordinates are positive is called the <span id="Vectors in Space-Rectangular Coordinates in Space-first octant"></span><strong id="first octant">first octant</strong>. There are eight octants in all.
 </p>
 
 <p>
@@ -95,6 +104,107 @@ Using the unit vectors \(\textbf{i} = \langle 1, 0, 0 \rangle\), \(\textbf{j} = 
 <p>
 where the scalars \(a\), \(b\) and \(c\) are the <span id="Vectors in Space-Vectors in Space-components"></span><strong id="components">components</strong> of vector \(\textbf{v}\).
 </p>
+
+<p>
+Not all vectors are position vectors, and they are computed differently. For example, the component form of vector \(\textbf{PQ}\) is represented as follows:
+</p>
+
+\begin{align}
+\textbf{PQ} = \langle x_2 - x_1, y_2 - y_1, z_2 - z_1 \rangle
+\end{align}
+
+<p>
+<img src="https://albamr09.github.io/public/assets/vectors.png" alt="Vectors" style="width:400px;">
+</p>
+
+<p>
+As FIGURE 2 suggests, \(\textbf{PQ}\) is equal to the following position vector:
+</p>
+
+\begin{align}
+\textbf{OR} = (x_2 - x_1)\textbf{i} + (y_2 - y_1)\textbf{j} + (z_2 - z_1)\textbf{k}
+\end{align}
+
+<div id="Vectors in Space-Vector Definitions and Operations"><h2 id="Vector Definitions and Operations" class="header"><a href="#Vectors in Space-Vector Definitions and Operations">Vector Definitions and Operations</a></h2></div>
+
+<p>
+If \(\textbf{v} = a\textbf{i} + b\textbf{j} + c\textbf{k}\) and \(\textbf{w} = d\textbf{i} + e \textbf{j} + f\textbf{k}\) are vectors and \(g\) is a scalar, the following hold.
+</p>
+
+<ul>
+<li>
+\(\textbf{v} = \textbf{w}\) if and only if \(a = d\), \(b = e\) and \(c = f\).
+
+</li><li>
+\(\textbf{v} + \textbf{w} = (a + d)\textbf{i} + (b + e)\textbf{j} + (c + f)\textbf{k}\)
+
+</li><li>
+\(\textbf{v} - \textbf{w} = (a - d)\textbf{i} + (b - e)\textbf{j} + (c - f)\textbf{k}\)
+
+</li><li>
+\(g\textbf{v} = ga \textbf{i} + gb \textbf{j} + gc \textbf{k}\)
+
+</li><li>
+\(|\textbf{v}| = \sqrt{a^2 + b^2 + c^2}\)
+
+</li><li>
+\(\textbf{v} \cdot \textbf{w} = ad + be + cf\)
+
+</li></ul>
+<div id="Vectors in Space-Angle between Two Vectors"><h2 id="Angle between Two Vectors" class="header"><a href="#Vectors in Space-Angle between Two Vectors">Angle between Two Vectors</a></h2></div>
+
+<p>
+If \(\theta\) is the angle between two nonzero vectors \(\textbf{v}\) and \(\textbf{w}\), where \(0º \leq \theta \leq 180º\), then:
+</p>
+
+\begin{align}
+\cos \theta = \frac{\textbf{v} \cdot \textbf{w}}{|\textbf{v}||\textbf{w}|}
+\end{align}
+
+<div id="Vectors in Space-Direction Angles in Space"><h2 id="Direction Angles in Space" class="header"><a href="#Vectors in Space-Direction Angles in Space">Direction Angles in Space</a></h2></div>
+
+<p>
+In three dimensions, a vector is determined by its magnitude and three direction angles. As shown in FIGURE 3:
+</p>
+
+<ul>
+<li>
+\(\alpha\) is the direction angle between \(\textbf{v}\) and the positive \(x\)-axis
+
+</li><li>
+\(\beta\) is the direction angle between \(\textbf{v}\) and the positive \(y\)-axis
+
+</li><li>
+\(\gamma\) is the direction angle between \(\textbf{v}\) and the positive \(z\)-axis
+
+</li></ul>
+<p>
+<img src="https://albamr09.github.io/public/assets/direction_angles.png" alt="Direction Angles" style="width:350px;">
+</p>
+
+<p>
+We can evaluate these angles using the expression for the cosine of the angle between two vectors. Note that \(\textbf{i} = \langle 1, 0, 0 \rangle\), \(\textbf{j} = \langle 0, 1, 0 \rangle\) and \(\textbf{k} = \langle 0, 0, 1 \rangle\), where each one has magnitude \(1\). For \(\textbf{v} = a\textbf{i} + b \textbf{j} + c\textbf{k}\):
+</p>
+
+\begin{align}
+\cos \alpha = \frac{\textbf{v} \cdot \textbf{i}}{|\textbf{v}||\textbf{i}|} = \frac{a}{|\textbf{v}|}
+\end{align}
+
+\begin{align}
+\cos \beta = \frac{\textbf{v} \cdot \textbf{j}}{|\textbf{v}||\textbf{j}|} = \frac{b}{|\textbf{v}|}
+\end{align}
+
+\begin{align}
+\cos \gamma = \frac{\textbf{v} \cdot \textbf{k}}{|\textbf{v}||\textbf{k}|} = \frac{c}{|\textbf{v}|}
+\end{align}
+
+<p>
+These quantities, \(\cos \alpha\), \(\cos \beta\) and \(\cos \gamma\) are called <span id="Vectors in Space-Direction Angles in Space-direction cosines"></span><strong id="direction cosines">direction cosines</strong>. And they satisfy:
+</p>
+
+\begin{align}
+\cos^2 \alpha + \cos^2 \beta + \cos^2 \gamma = 1
+\end{align}
 </div>
   
 
