--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -305,6 +305,9 @@ Appendix
 <li>
 <a href="B.html">B. Vectors in Space</a>
 
+</li><li>
+<a href="C.html">C. Polar Form of Conic Sections</a>
+
 </li></ol>
 </li></ol>
 </div>
