[AGAA] C: fix typo [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/C.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/C.html
@@ -52,17 +52,17 @@
 A polar equation of the form:
 </p>
 
-\begin{aling}
+\begin{align}
 r = \frac{ep}{1 \pm e \cos \theta}
-\end{aling}
+\end{align}
 
 <p>
 or
 </p>
 
-\begin{aling}
+\begin{align}
 r = \frac{ep}{1 \pm e \sin \theta}
-\end{aling}
+\end{align}
 
 <p>
 has a conic section as its graph. The eccentricity is \(e\) (where \(e &gt; 0\)), and \(|p|\) is the distance between the pole (focus) and the directrix.
@@ -76,57 +76,57 @@ has a conic section as its graph. The eccentricity is \(e\) (where \(e &gt; 0\))
 We can verify that those equations satisfy the <a href="07_03.html#Eccentricity">definition of a conic section</a>. Consider FIGURE 1, where the directrix is vertical and \(p &gt; 0\) units to the right of the focus \(F(0, 0º)\). Let \(P(r, \theta)\) be a point on the graph, then the distance between \(P\) and the directrix is obtained as:
 </p>
 
-\begin{aling}
+\begin{align}
 PP' = |p - x|
-\end{aling}
+\end{align}
 
-\begin{aling}
+\begin{align}
 = |p - r \cos \theta|
-\end{aling}
+\end{align}
 
 <p>
 We substitute \(r\) by \(\frac{ep}{1 \pm e \cos \theta}\).
 </p>
 
-\begin{aling}
+\begin{align}
 = |p - \left(\frac{ep}{1 \pm e \cos \theta} \right) \cos \theta|
-\end{aling}
+\end{align}
 
-\begin{aling}
+\begin{align}
 = |\frac{(1 + e \cos \theta) - ep\cos \theta}{1 \pm e \cos \theta} |
-\end{aling}
+\end{align}
 
-\begin{aling}
+\begin{align}
 = |\frac{p + ep \cos \theta - ep\cos \theta}{1 \pm e \cos \theta}|
-\end{aling}
+\end{align}
 
-\begin{aling}
+\begin{align}
 = |\frac{p}{1 \pm e \cos \theta}|
-\end{aling}
+\end{align}
 
 <p>
 Given:
 </p>
 
-\begin{aling}
+\begin{align}
 r = \frac{ep}{1 \pm e \cos \theta}
-\end{aling}
+\end{align}
 
 <p>
 Then we can multiply each side by \(\frac{1}{e}\)
 </p>
 
-\begin{aling}
+\begin{align}
 \frac{r}{e} = \frac{p}{1 \pm e \cos \theta}
-\end{aling}
+\end{align}
 
 <p>
 We substitute this expression for \(\frac{r}{e}\):
 </p>
 
-\begin{aling}
+\begin{align}
 PP' = |\frac{p}{1 \pm e \cos \theta}| = |\frac{r}{e}| = \frac{|r|}{|e|} = \frac{|r|}{e}
-\end{aling}
+\end{align}
 
 <p>
 Note that \(e &gt; 0\), therefor \(|e| = e\).
@@ -136,9 +136,9 @@ Note that \(e &gt; 0\), therefor \(|e| = e\).
 The distance between the pole and \(P\) is \(PF = |r|\), so the ratio of \(PF\) to \(PP'\) is:
 </p>
 
-\begin{aling}
+\begin{align}
 \frac{PF}{PP'} = frac{|r|}{\frac{|r|}{e}} = e
-\end{aling}
+\end{align}
 
 <p>
 Thus, by definition, the graph has eccentricity \(e\) and must be a conic.
