[AGAA] C: more typos [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/C.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/C.html
@@ -129,7 +129,7 @@ PP' = |\frac{p}{1 \pm e \cos \theta}| = |\frac{r}{e}| = \frac{|r|}{|e|} = \frac{
 \end{align}
 
 <p>
-Note that \(e &gt; 0\), therefor \(|e| = e\).
+Note that \(e &gt; 0\), therefore \(|e| = e\).
 </p>
 
 <p>
@@ -137,7 +137,7 @@ The distance between the pole and \(P\) is \(PF = |r|\), so the ratio of \(PF\) 
 </p>
 
 \begin{align}
-\frac{PF}{PP'} = frac{|r|}{\frac{|r|}{e}} = e
+\frac{PF}{PP'} = \frac{|r|}{\frac{|r|}{e}} = e
 \end{align}
 
 <p>
