[ABPC] Start notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/07_02.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/07_02.html
@@ -226,7 +226,7 @@ The ellipse with center at the origin and equation:
 </p>
 
 <p>
-has vertices \((\pm a, 0)\), endpoints of the minor axis \((0, \pm b)\) and foci \((\pm c, 0)\) where \(c^2 = a^2 - b^\)
+has vertices \((\pm a, 0)\), endpoints of the minor axis \((0, \pm b)\) and foci \((\pm c, 0)\) where \(c^2 = a^2 - b^2\)
 </p>
 
 <p>
@@ -242,7 +242,7 @@ The ellipse with center at the origin and equation
 </p>
 
 <p>
-has vertices \((0, \pm a)\), endpoints of the minor axis \((\pm b, 0)\) and foci \((0, \pm c)\) where \(c^2 = a^2 - b^\)
+has vertices \((0, \pm a)\), endpoints of the minor axis \((\pm b, 0)\) and foci \((0, \pm c)\) where \(c^2 = a^2 - b^2\)
 </p>
 
 <div id="Ellipses and Hyperbolas-Ellipse-Translations of Ellipses"><h3 id="Translations of Ellipses" class="header"><a href="#Ellipses and Hyperbolas-Ellipse-Translations of Ellipses">Translations of Ellipses</a></h3></div>
@@ -358,7 +358,7 @@ y = \pm \frac{b}{a} x \sqrt{1 - \frac{a^2}{x^2}}
 \end{align}
 
 <p>
-So when \(x \rightarrow \ifty\) we know that \(\frac{a^2}{x^2} \rightarrow 0\) and thus:
+So when \(x \rightarrow \infty\) we know that \(\frac{a^2}{x^2} \rightarrow 0\) and thus:
 </p>
 
 \begin{align}
