--- a/src/Notes/Music/ABPCI/index.html
+++ b/src/Notes/Music/ABPCI/index.html
@@ -1,9 +1,9 @@
 <html><head>
     <!-- Normal styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../src/style/index.css">
+    <link rel="Stylesheet" type="text/css" href="../../../../src/style/index.css">
     <!-- Custom styling from vimwiki -->
-    <link rel="Stylesheet" type="text/css" href="../../src/style/custom.css">
-    <title>Notes</title>
+    <link rel="Stylesheet" type="text/css" href="../../../../src/style/custom.css">
+    <title>Alfred Basic Piano Course I</title>
   <script type="text/javascript" src="https://polyfill.io/v3/polyfill.min.js?features=es6" id="latex_script" data-description="Support for latex"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script" data-description="Support for latex"></script><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/search.css" data-description="Styling for search"><link rel="Stylesheet" type="text/css" href="https://albamr09.github.io/src/style/atom-one-light.min.css" data-description="Code highlight"><link rel="icon" type="image/svg+xml" href="https://albamr09.github.io/public/icon.svg" data-description="Page icon"></head>
   <body>
     <a href="https://albamr09.github.io/" style="
@@ -31,30 +31,36 @@
     <hr>
     <div class="content">
 <p>
-<a href="https://albamr09.github.io/">Back</a>
+<a href="../index.html">Back</a>
 </p>
 
-<div id="Notes"><h1 id="Notes" class="header"><a href="#Notes">Notes</a></h1></div>
+<div id="Alfred Basic Piano Course I"><h1 id="Alfred Basic Piano Course I" class="header"><a href="#Alfred Basic Piano Course I">Alfred Basic Piano Course I</a></h1></div>
 
 <hr>
 
-<ul>
-<li>
-<a href="Math/index.html">Math</a>
+<div id="Alfred Basic Piano Course I-Keys"><h2 id="Keys" class="header"><a href="#Alfred Basic Piano Course I-Keys">Keys</a></h2></div>
 
-</li><li>
-<a href="ComputerScience/index.html">Computer Science</a>
+<p>
+Piano keys are named as follows:
+</p>
 
-</li><li>
-<a href="DataScience/index.html">Data Science</a>
+<p>
+<img src="https://albamr09.github.io/public/assets/piano_keys.png" alt="Piano Keys" style="width:700px;">
+</p>
 
-</li><li>
-<a href="Music/index.html">Music</a>
+<p>
+The lowest key on a \(88\) key piano is <span id="Alfred Basic Piano Course I-Keys-La"></span><strong id="La">La</strong>. The <span id="Alfred Basic Piano Course I-Keys-Do"></span><strong id="Do">Do</strong> nearest the middle of the piano is called <span id="Alfred Basic Piano Course I-Keys-Middle C"></span><strong id="Middle C">Middle C</strong>.
+</p>
 
-</li><li>
-<a href="Other/index.html">Other</a>
+<div id="Alfred Basic Piano Course I-Right Hand C Position"><h2 id="Right Hand C Position" class="header"><a href="#Alfred Basic Piano Course I-Right Hand C Position">Right Hand C Position</a></h2></div>
 
-</li></ul>
+<p>
+Place the right hand on the keyboard so that the <span id="Alfred Basic Piano Course I-Right Hand C Position-1st finger"></span><strong id="1st finger">1st finger</strong> falls on <span id="Alfred Basic Piano Course I-Right Hand C Position-MIDDLE C"></span><strong id="MIDDLE C">MIDDLE C</strong>. The \(4\) remaining fingers fall naturally on the next \(4\) white keys:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/right_hand_c_position.png" alt="Right Hand C Position" style="width:700px;">
+</p>
 </div>
   
 
