[APC] Continue with notes [skip ci]

--- a/src/Notes/Music/ABPCI/index.html
+++ b/src/Notes/Music/ABPCI/index.html
@@ -49,18 +49,66 @@ Piano keys are named as follows:
 </p>
 
 <p>
-The lowest key on a \(88\) key piano is <span id="Alfred Basic Piano Course I-Keys-La"></span><strong id="La">La</strong>. The <span id="Alfred Basic Piano Course I-Keys-Do"></span><strong id="Do">Do</strong> nearest the middle of the piano is called <span id="Alfred Basic Piano Course I-Keys-Middle C"></span><strong id="Middle C">Middle C</strong>.
+The lowest key on a \(88\) key piano is <span id="Alfred Basic Piano Course I-Keys-La"></span><strong id="La">La</strong>. The <span id="Alfred Basic Piano Course I-Keys-Do"></span><strong id="Do">Do</strong> nearest the middle of the piano is called <span id="Alfred Basic Piano Course I-Keys-Middle Do"></span><strong id="Middle Do">Middle Do</strong>.
 </p>
 
 <div id="Alfred Basic Piano Course I-Right Hand C Position"><h2 id="Right Hand C Position" class="header"><a href="#Alfred Basic Piano Course I-Right Hand C Position">Right Hand C Position</a></h2></div>
 
 <p>
-Place the right hand on the keyboard so that the <span id="Alfred Basic Piano Course I-Right Hand C Position-1st finger"></span><strong id="1st finger">1st finger</strong> falls on <span id="Alfred Basic Piano Course I-Right Hand C Position-MIDDLE C"></span><strong id="MIDDLE C">MIDDLE C</strong>. The \(4\) remaining fingers fall naturally on the next \(4\) white keys:
+Place the right hand on the keyboard so that the <span id="Alfred Basic Piano Course I-Right Hand C Position-1st finger"></span><strong id="1st finger">1st finger</strong> falls on <span id="Alfred Basic Piano Course I-Right Hand C Position-Middle Do"></span><strong id="Middle Do">Middle Do</strong>. The \(4\) remaining fingers fall naturally on the next \(4\) white keys:
 </p>
 
 <p>
 <img src="https://albamr09.github.io/public/assets/right_hand_c_position.png" alt="Right Hand C Position" style="width:700px;">
 </p>
+
+<p>
+The names of the \(5\) keys are: <span id="Alfred Basic Piano Course I-Right Hand C Position-do"></span><strong id="do">do</strong>, <span id="Alfred Basic Piano Course I-Right Hand C Position-re"></span><strong id="re">re</strong>, <span id="Alfred Basic Piano Course I-Right Hand C Position-mi"></span><strong id="mi">mi</strong>, <span id="Alfred Basic Piano Course I-Right Hand C Position-fa"></span><strong id="fa">fa</strong>, <span id="Alfred Basic Piano Course I-Right Hand C Position-sol"></span><strong id="sol">sol</strong>.
+</p>
+
+<p>
+Notes for this position are writter on the <span id="Alfred Basic Piano Course I-Right Hand C Position-trebble staff"></span><strong id="trebble staff">trebble staff</strong>. See the following figure:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/right_hand_c_position_score.png" alt="Right Hand C Position Score" style="width:500px;">
+</p>
+
+<p>
+The treble clef sign is used for right hand notes.
+</p>
+
+<p>
+We see that middle do is writter on a short line below the staff, which is called a <span id="Alfred Basic Piano Course I-Right Hand C Position-leger line"></span><strong id="leger line">leger line</strong>.
+</p>
+
+<div id="Alfred Basic Piano Course I-Quarter Notes and Half Notes"><h2 id="Quarter Notes and Half Notes" class="header"><a href="#Alfred Basic Piano Course I-Quarter Notes and Half Notes">Quarter Notes and Half Notes</a></h2></div>
+
+<p>
+Music is made up of <span id="Alfred Basic Piano Course I-Quarter Notes and Half Notes-short"></span><strong id="short">short</strong> and <span id="Alfred Basic Piano Course I-Quarter Notes and Half Notes-long"></span><strong id="long">long</strong> tones, which are writter with <span id="Alfred Basic Piano Course I-Quarter Notes and Half Notes-notes"></span><strong id="notes">notes</strong>.
+</p>
+
+<p>
+A quarter note is written as follows:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/quarter_note.png" alt="Quarter Note">
+</p>
+
+<p>
+This note has a count of \(1\). A half note is written as follows:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/half_note.png" alt="Half Note">
+</p>
+
+<p>
+This note has a count of \(2\).
+</p>
+
+<div id="Alfred Basic Piano Course I-Left Hand C Position"><h2 id="Left Hand C Position" class="header"><a href="#Alfred Basic Piano Course I-Left Hand C Position">Left Hand C Position</a></h2></div>
 </div>
   
 
